Fix #294: Adjusting the style of display of software version information on mobile platforms (#295)

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -876,3 +876,20 @@ table {
 	display: block;
 	clear: both;
 }
+
+.page-software_update-version_info {
+	width: 100%;
+}
+
+.page-software_update-version_info-row {
+	width: 100%;
+}
+
+.page-software_update-version_info-column1 {
+	width: 70%;
+}
+
+.page-software_update-version_info-column2 {
+	width: 30%;
+	text-align: left;
+}
